# ogl-samples

./: CMakeLists.txt  index.html  params.json  readme.md  readme.txt
common/glf/: compiler.hpp  compiler.inl  glf.hpp  glf.inl
data/: 3dTexture.dds  demoTexture.dds  gli_bad_BGR_and_swizzle.dds
data/es-200/: fbo-shadow-depth.vert  fbo-shadow-render.frag  fbo-shadow-render.vert
data/es-300/: fbo-srgb.frag
data/gl-320/: buffer-uniform-shared.vert  buffer-uniform.frag  buffer-uniform.vert  draw-base-vertex.frag  draw-base-vertex.vert  draw-instanced.frag  draw-instanced.vert  draw-range-arrays.frag  draw-range-elements.frag  fbo-blend-points.frag  fbo-blend.frag  fbo-depth-multisample.vert  fbo-depth.frag  fbo-multisample-explicit-box.frag  fbo-multisample-explicit-near.frag  fbo-multisample-explicit.vert  fbo-shadow-depth.vert  fbo-shadow-render.frag  fbo-shadow-render.vert  fbo-shadow-splash.frag  fbo-srgb.frag  fbo-srgb.vert  fbo.frag  glsl-cast-fail.vert  glsl-input-struct.vert  glsl-precision.frag  glsl-precision.vert  glsl-uniform-align.frag  primitive-line-msaa-render.frag  primitive-line-msaa-splash.frag  primitive-point-clip.vert  primitive-point-quad.geom  primitive-point-quad.vert  primitive-point.vert  primitive-shading.frag  primitive-shading.geom  primitive-sprite.frag  program-uniform.frag  query-occlusion.vert  texture-2d.frag  (+4 more)
data/gl-330/: draw-without-vertex-attrib.vert  fetch.frag  flat-color.frag  flat-color.vert  image-2d.vert  multisample-explicit-box-nv.frag  multisample-explicit-box.frag  multisample-explicit-near-nv.frag  multisample-explicit-near.frag  point-sprite.vert  query-conditional.vert  sampler-object.frag  texture-2d.frag  texture-2d.vert  texture-integer-10bit.frag  texture-integer.frag  texture-integer.vert
data/gl-400/: buffer-uniform-array.vert  fbo-shadow-render.frag  fetch.frag  fetch.vert  gather.frag  sampler-array.frag  subroutine.frag  texture-cube.frag  texture-cube.vert  texture-derivative1.frag  texture-derivative2.frag  transform.vert
data/gl-410/: primitive-instancing.frag  primitive-instancing.geom  primitive-instancing.vert  separate.vert  (+1 more)
framework/: CMakeLists.txt  buffer.hpp  caps.cpp  caps.hpp  compiler.cpp  compiler.hpp  csv.cpp  dsa.cpp  dsa.hpp  mesh.cpp  png.cpp  png.hpp  sementics.hpp  test.cpp  test.hpp  util.hpp  vertex.hpp
insights/: CMakeLists.txt  gl-XXX-5.2-matching-by-variable.cpp  gl-XXX-5.3-matching-by-block.cpp  gl-XXX-5.9-explicit-attribute-location.cpp  gl-XXX-matching-by-variable.cpp
micro/: CMakeLists.txt  caps.cpp  csv.cpp  main.cpp  png.cpp  png.hpp  test.hpp  test_buffer.cpp  test_buffer_interleaved.cpp  test_buffer_interleaved.hpp  test_buffer_separated.cpp  test_buffer_separated.hpp  test_compiler.cpp  test_compiler.hpp  test_draw_array.cpp  test_draw_array.hpp  test_draw_arrays.cpp  test_draw_arrays.hpp  test_draw_arrays_vao.cpp  test_draw_arrays_vao.hpp  test_draw_call.cpp  test_draw_elements.cpp  test_draw_elements.hpp  test_draw_indexing.cpp  test_draw_indexing.hpp  test_screenspace_coherence.cpp  test_screenspace_coherence.hpp  test_small_primitive.cpp  test_uniform_caching.cpp
perfs/: CMakeLists.txt  buffer.cpp  csv.cpp  csv.hpp  hz-430-base-vertex.cpp  hz-430-draw-range-array.cpp  hz-430-draw-range-element.cpp  hz-430-multi-draw-indirect-array.cpp  hz-430-multi-draw-indirect-element.cpp  hz-430-thread.cpp  hz-430-vertex-array-object.cpp  hz-430-vertex-array-objects.cpp  main.cpp  test-buffer-multi-attrib.cpp  test-buffer.cpp  test-draw.cpp  test.cpp  test.hpp  test_draw_arrays.cpp  test_draw_arrays.hpp  test_draw_arrays_vao.cpp  test_draw_arrays_vao.hpp  test_draw_elements.cpp  test_draw_elements.hpp  test_draw_indexing.cpp  test_draw_indexing.hpp  test_draw_range_arrays.cpp  test_draw_range_arrays.hpp  test_draw_range_elements.cpp  test_draw_range_elements.hpp  test_screenspace_coherence.cpp  test_screenspace_coherence.hpp
samples/: CMakeLists.txt  es-200-draw-elements.cpp  gl-300-fbo-multisample.cpp  gl-300-test-alpha.cpp  gl-320-buffer-uniform-shared.cpp  gl-320-buffer-uniform.cpp  gl-320-buffer-update.cpp  gl-320-draw-base-vertex.cpp  gl-320-draw-image-space.cpp  gl-320-draw-instanced.cpp  gl-320-draw-multiple.cpp  gl-320-draw-without-vertex-attrib.cpp  gl-320-fbo-depth-multisample.cpp  gl-320-fbo-depth-stencil.cpp  gl-320-fbo-depth.cpp  gl-320-fbo-layered.cpp  gl-320-fbo-multisample-integer.cpp  gl-320-fbo-multisample.cpp  gl-320-fbo-rtt-texture-array.cpp  gl-320-fbo-rtt.cpp  gl-320-fbo-shadow.cpp  gl-320-fbo-srgb.cpp  gl-320-fbo.cpp  gl-320-glsl-discard.cpp  gl-320-primitive-shading.cpp  gl-320-primitive-sprite.cpp  gl-320-query-conditional.cpp  gl-320-sync.cpp  gl-320-test-scissor.cpp  gl-320-texture-2d.cpp  gl-320-texture-3d.cpp  gl-320-texture-compressed-ext.cpp  gl-320-texture-cube.cpp  gl-320-texture-fetch.cpp  gl-320-texture-integer.cpp  gl-320-texture-offset.cpp  gl-320-texture-streaming.cpp  gl-320-transform-feedback-interleaved.cpp  gl-320-transform-feedback-separated.cpp  gl-330-blend-index.cpp  (+153 more)
tests/: CMakeLists.txt  csv.cpp  csv.hpp  es-200-draw-elements.cpp  es-200-fbo-shadow.cpp  es-300-draw-elements.cpp  es-300-fbo-shadow.cpp  es-300-fbo-srgb.cpp  es-300-texture-format-packed.cpp  gl-300-fbo-multisample.cpp  gl-300-test-alpha.cpp  gl-320-buffer-uniform-shared.cpp  gl-320-buffer-uniform.cpp  gl-320-buffer-update.cpp  gl-320-caps.cpp  gl-320-draw-base-vertex.cpp  gl-320-draw-image-space.cpp  gl-320-draw-instanced.cpp  gl-320-draw-multiple.cpp  gl-320-draw-range-arrays.cpp  gl-320-draw-range-elements.cpp  gl-320-draw-without-vertex-attrib.cpp  gl-320-fbo-blend-points.cpp  gl-320-fbo-blend.cpp  gl-320-fbo-blit.cpp  gl-320-fbo-depth-multisample.cpp  gl-320-fbo-depth-stencil.cpp  gl-320-fbo-depth.cpp  gl-320-fbo-integer-blit.cpp  gl-320-fbo-integer.cpp  gl-320-fbo-layered.cpp  gl-320-fbo-multisample-explicit.cpp  gl-320-fbo-multisample-integer.cpp  gl-320-fbo-multisample-mask.cpp  gl-320-fbo-multisample.cpp  gl-320-fbo-readpixels-async.cpp  gl-320-fbo-readpixels-staging.cpp  gl-320-fbo-readpixels.cpp  gl-320-fbo-rtt-texture-array.cpp  gl-320-fbo-rtt.cpp  (+248 more)
(+112 files in other folders)
